# QCCT

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  model.py  requirements-cpu.txt  requirements-gpu.txt
custom-congestion-controller/: Cargo.toml  model_cpu.pt
custom-congestion-controller/src/: lib.rs
docker/: Dockerfile  README.md  apply_tc.sh  build.sh  docker-compose.yml
echo/: Cargo.toml
logs/: error1
models/: time2vec.py  transformer.py
scratch/: quic.cc
scripts/: apply_tc.sh  build.sh  drop_tc.sh
setup_tap_dev/: Makefile
simulations/202407170140/: quic-tap-0-0.pcap  quic-tap-1-0.pcap
simulations/202407230211/: client.pcap  server.pcap
vim/: .vimrc
vim/.vim/: README.md
